Improvement: Only search direct children for named element